--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/GASCourse/Maps/GCMap.GCMap
 EditorStartupMap=/Game/GASCourse/Maps/GCMap.GCMap
+GlobalDefaultGameMode=/Game/GASCourse/Game/BP_GASGameMode.BP_GASGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
