Section 5: Character Death

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,5 +11,7 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GCTags.Events.Player.Primary",DevComment="Tag for the Primary Gameplay Ability")
++GameplayTagList=(Tag="GCTags.GCAbilities.Death",DevComment="")
 +GameplayTagList=(Tag="GCTags.GCAbilities.Enemy.HitReact",DevComment="")
++GameplayTagList=(Tag="GCTags.Status.Dead",DevComment="")
 
