--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -13,5 +14,6 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GCTags.Events.Player.Primary",DevComment="Tag for the Primary Gameplay Ability")
 +GameplayTagList=(Tag="GCTags.GCAbilities.Death",DevComment="")
 +GameplayTagList=(Tag="GCTags.GCAbilities.Enemy.HitReact",DevComment="")
++GameplayTagList=(Tag="GCTags.SetByCaller.Melee",DevComment="")
 +GameplayTagList=(Tag="GCTags.Status.Dead",DevComment="")
 
