Section 7: Player Damage And Impacts

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,7 +11,10 @@ bDynamicReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="GameplayCue.BurstImpact",DevComment="")
++GameplayTagList=(Tag="GameplayCue.HitReact",DevComment="Tag for hit react gamepaly cue")
 +GameplayTagList=(Tag="GCTags.Events.Player.Primary",DevComment="Tag for the Primary Gameplay Ability")
++GameplayTagList=(Tag="GCTags.GCAbilities.BlockHitReact",DevComment="")
 +GameplayTagList=(Tag="GCTags.GCAbilities.Death",DevComment="")
 +GameplayTagList=(Tag="GCTags.GCAbilities.Enemy.HitReact",DevComment="")
 +GameplayTagList=(Tag="GCTags.SetByCaller.Melee",DevComment="")
