Section 8: Cost and cooldown part 1

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,5 +1,4 @@
 ;METADATA=(Diff=true, UseCommands=true)
-
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -13,10 +12,13 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.BurstImpact",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.HitReact",DevComment="Tag for hit react gamepaly cue")
++GameplayTagList=(Tag="GCTags.Cooldown.Secondary",DevComment="")
 +GameplayTagList=(Tag="GCTags.Events.Player.Primary",DevComment="Tag for the Primary Gameplay Ability")
++GameplayTagList=(Tag="GCTags.Events.Player.Secondary",DevComment="")
 +GameplayTagList=(Tag="GCTags.GCAbilities.BlockHitReact",DevComment="")
 +GameplayTagList=(Tag="GCTags.GCAbilities.Death",DevComment="")
 +GameplayTagList=(Tag="GCTags.GCAbilities.Enemy.HitReact",DevComment="")
 +GameplayTagList=(Tag="GCTags.SetByCaller.Melee",DevComment="")
++GameplayTagList=(Tag="GCTags.SetByCaller.Player.Secondary",DevComment="")
 +GameplayTagList=(Tag="GCTags.Status.Dead",DevComment="")
 
